src/test/compile-fail/bad-main.rs
// xfail-stage0
// xfail-stage1
// xfail-stage2
// error-pattern: bad type signature

fn main(int x) {
}
